fix outline when clicking job pause button

--- a/web/assets/css/buttons.less
+++ b/web/assets/css/buttons.less
@@ -41,6 +41,10 @@
     cursor: pointer;
   }
 
+  &:focus {
+    outline: none;
+  }
+
   &.enabled {
     background-color: @base0D;
 
@@ -67,6 +71,7 @@
   text-align: center;
   width: 60px;
 }
+
 .btn-large i {
   line-height: 60px;
   width: 60px;
