--- a/web/templates/pipeline.html
+++ b/web/templates/pipeline.html
@@ -20,7 +20,7 @@
   </dl>
 </div>
 
-<table class="version-info">
+<table class="lower-right-info">
   <tr>
     <td class="label">cli:</td>
     <td>
