--- a/web/templates/index.html
+++ b/web/templates/index.html
@@ -31,7 +31,7 @@
     <div class="display-in-middle">
         <div class="h1">no pipelines configured</div>
         <h3>first, download the CLI tools:</h3>
-        <ul id="cli-downloads">
+        <ul class="cli-downloads">
           <li><a href="{{url "DownloadCLI" "darwin" "amd64"}}"><i class="fa fa-apple"></i></a></li>
           <li><a href="{{url "DownloadCLI" "windows" "amd64"}}"><i class="fa fa-windows"></i></a></li>
           <li><a href="{{url "DownloadCLI" "linux" "amd64"}}"><i class="fa fa-linux"></i></a></li>
