make no-pipelines fly links BIG
[#115358021]

Signed-off-by: Chris Brown <cbrown@pivotal.io>

--- a/web/assets/css/legacy.less
+++ b/web/assets/css/legacy.less
@@ -58,6 +58,10 @@
   text-decoration: none;
 }
 
+.display-in-middle .cli-downloads li {
+  margin: 1em;
+}
+
 .lower-right-info {
   position: fixed;
   bottom: 1em;
