--- a/web/templates/index.html
+++ b/web/templates/index.html
@@ -32,9 +32,9 @@
         <div class="h1">no pipelines configured</div>
         <h3>first, download the CLI tools:</h3>
         <ul class="cli-downloads">
-          <li><a href="{{url "DownloadCLI" "darwin" "amd64"}}"><i class="fa fa-apple"></i></a></li>
-          <li><a href="{{url "DownloadCLI" "windows" "amd64"}}"><i class="fa fa-windows"></i></a></li>
-          <li><a href="{{url "DownloadCLI" "linux" "amd64"}}"><i class="fa fa-linux"></i></a></li>
+          <li><a href="{{url "DownloadCLI" "darwin" "amd64"}}"><i class="fa fa-apple fa-5x"></i></a></li>
+          <li><a href="{{url "DownloadCLI" "windows" "amd64"}}"><i class="fa fa-windows fa-5x"></i></a></li>
+          <li><a href="{{url "DownloadCLI" "linux" "amd64"}}"><i class="fa fa-linux fa-5x"></i></a></li>
         </ul>
         <h3>then, use `<a class="ansi-blue-fg" target="_blank" href="https://concourse.ci/fly-cli.html#fly-set-pipeline">fly set-pipeline</a>` to set up your new pipeline</h3>
     </div>
