fix fly set-pipeline docs link
Signed-off-by: Chris Brown <cbrown@pivotal.io>

--- a/web/templates/index.html
+++ b/web/templates/index.html
@@ -36,7 +36,7 @@
           <li><a href="{{url "DownloadCLI" "windows" "amd64"}}"><i class="fa fa-windows fa-5x"></i></a></li>
           <li><a href="{{url "DownloadCLI" "linux" "amd64"}}"><i class="fa fa-linux fa-5x"></i></a></li>
         </ul>
-        <h3>then, use `<a class="ansi-blue-fg" target="_blank" href="https://concourse.ci/fly-cli.html#fly-set-pipeline">fly set-pipeline</a>` to set up your new pipeline</h3>
+        <h3>then, use `<a class="ansi-blue-fg" target="_blank" href="https://concourse.ci/fly-set-pipeline.html">fly set-pipeline</a>` to set up your new pipeline</h3>
     </div>
   </body>
 </html>
