Reposition the pause/unpause buttons for auto-scroll

--- a/web/assets/css/pipeline_nav.less
+++ b/web/assets/css/pipeline_nav.less
@@ -80,6 +80,7 @@
 }
 
 .pipelinesNav-enabled .pipelines li {
+  position: relative;
   padding: 0;
   margin: 0;
   text-align: right;
@@ -100,6 +101,12 @@
     text-overflow: ellipsis;
     white-space: nowrap;
     overflow: hidden;
+  }
+
+  span.fl {
+    position: absolute;
+    top: 0px;
+    left: 0px;
   }
 }
 
