--- a/web/templates/layouts/without_pipeline.html
+++ b/web/templates/layouts/without_pipeline.html
@@ -31,10 +31,10 @@
       <div class="page-to-slide">
         <nav>
           <ul class="js-groups groups">
-            <li class="main"><span class="js-pipelinesNav-toggle btn-hamburger"><i class="fa fa-bars"></i></span></li><li class="main"><a href="/"><i class="fa fa-home"></i></a></li>
+            <li class="main"><span class="js-pipelinesNav-toggle btn-hamburger" aria-label="Toggle List of Pipelines"><i class="fa fa-bars"></i></span></li><li class="main"><a href="/" aria-label="Back to Home Page"><i class="fa fa-home"></i></a></li>
           </ul>
           <ul class="nav-right">
-            <li class="nav-item"><a href="/builds"><i class="fa fa-tasks"></i></a></li>
+            <li class="nav-item"><a href="/builds" aria-label="Builds List"><i class="fa fa-tasks"></i></a></li>
           </ul>
         </nav>
 
