--- a/web/templates/layouts/with_pipeline.html
+++ b/web/templates/layouts/with_pipeline.html
@@ -31,13 +31,13 @@
       <div class="page-to-slide">
         <nav>
           <ul class="js-groups groups">
-            <li class="main"><span class="js-pipelinesNav-toggle btn-hamburger"><i class="fa fa-bars"></i></span></li><li class="main"><a href="/pipelines/{{.PipelineName}}"><i class="fa fa-home"></i></a></li>
+            <li class="main"><span class="js-pipelinesNav-toggle btn-hamburger" aria-label="Toggle List of Pipelines"><i class="fa fa-bars"></i></span></li><li class="main"><a href="/pipelines/{{.PipelineName}}" aria-label="Back to Pipeline View"><i class="fa fa-home"></i></a></li>
             {{range .GroupStates}}
               <li{{if .Enabled}} class="active"{{end}}><a href="/pipelines/{{$.PipelineName}}?groups={{.Name}}">{{.Name}}</a></li>
             {{end}}
           </ul>
           <ul class="nav-right">
-            <li class="nav-item"><a href="/builds"><i class="fa fa-tasks"></i></a></li>
+            <li class="nav-item"><a href="/builds" aria-label="Builds List"><i class="fa fa-tasks"></i></a></li>
           </ul>
         </nav>
 
