--- a/web/templates/old-build.html
+++ b/web/templates/old-build.html
@@ -5,12 +5,12 @@
   <div class="build-header js-build" data-build-id="{{.Build.ID}}">
     <div class="build-actions fr">
       <form class="trigger-build" method="post" action="{{url "TriggerBuild" .PipelineName .Job}}">
-        <button class="build-action fr"><i class="fa fa-plus-circle"></i></button>
+        <button class="build-action fr" aria-label="Trigger Build"><i class="fa fa-plus-circle"></i></button>
       </form>
 
 
       {{if .Build.Abortable}}
-      <span class="build-action build-action-abort js-abortBuild fr"><i class="fa fa-times-circle"></i></span>
+      <span class="build-action build-action-abort js-abortBuild fr" aria-label="Abort Build"><i class="fa fa-times-circle"></i></span>
       {{end}}
     </div>
 
@@ -36,7 +36,6 @@
   </div>
   <div id="build-logs"></div>
 </div>
-
 
 <script src="{{asset "jquery-2.1.1.min.js"}}"></script>
 <script src="{{asset "concourse.js"}}"></script>
