--- a/web/templates/pipeline.html
+++ b/web/templates/pipeline.html
@@ -25,9 +25,9 @@
     <td class="label">cli:</td>
     <td>
       <ul class="cli-downloads">
-        <li><a href="{{url "DownloadCLI" "darwin" "amd64"}}"><i class="fa fa-apple"></i></a></li>
-        <li><a href="{{url "DownloadCLI" "windows" "amd64"}}"><i class="fa fa-windows"></i></a></li>
-        <li><a href="{{url "DownloadCLI" "linux" "amd64"}}"><i class="fa fa-linux"></i></a></li>
+        <li><a href="{{url "DownloadCLI" "darwin" "amd64"}}" aria-label="Download OS X CLI"><i class="fa fa-apple"></i></a></li>
+        <li><a href="{{url "DownloadCLI" "windows" "amd64"}}" aria-label="Download Windows CLI"><i class="fa fa-windows"></i></a></li>
+        <li><a href="{{url "DownloadCLI" "linux" "amd64"}}" aria-label="Download Linux CLI"><i class="fa fa-linux"></i></a></li>
       </ul>
     </td>
   </tr>
