redo aggregate UI, invert step state icon colors
Signed-off-by: Kim Eberz <kimeberz@gmail.com>

--- a/web/assets/css/_vars.less
+++ b/web/assets/css/_vars.less
@@ -14,4 +14,5 @@
 @base0D: #3498DB;
 @base0E: #9B59B6;
 @base0F: #8F4B2D;
+@base0G: #3D4A58; /* 17 color palettes are 1 better than 16 */
 @theme: "concourse";
