--- a/web/assets/css/legacy.less
+++ b/web/assets/css/legacy.less
@@ -254,16 +254,12 @@ li.prep-status {
 
 .build-step .header i.left {
   float: left;
-
-  /*
-    since the leftmost icons don't have a background color,
-    remove the spacing between it and the header
-  */
   margin-right: -6px;
 }
 
 .build-step .header i.right {
   float: right;
+  margin-left: -6px;
 }
 
 .build-step .header .dict-key,
