--- a/web/assets/css/legacy.less
+++ b/web/assets/css/legacy.less
@@ -264,6 +264,7 @@ li.prep-status {
 
 .build-step .header .dict-key,
 .build-step .header .dict-value {
+  font-size: 14px;
   line-height: 28px;
   padding: 0 6px;
 }
