preserve background for blinkin text

--- a/web/assets/css/typography.less
+++ b/web/assets/css/typography.less
@@ -59,6 +59,6 @@ h3, .h3 {
 }
 
 @keyframes blinker {
-  from, to { opacity: 0; }
-  50%      { opacity: 1; }
+  from, to { color: transparent; }
+  50%      { color: inherit; }
 }
