prefix /pipelines routes with /teams/:team_name
Notably, the :team_name param is only passed through to the response; it
is not yet actually being used to find saved objects (pipelines, jobs,
etc) that are relevant to the passed-in team.

All of the code which assigns the TeamName to a db.Build object in api/
should be removed once the db actually returns a db.Build with the team
name on it. At that time the tests will also need to change such that
the stubbed db.Build objects being returned will need to include
TeamName, which they specifically do not at this point in time.

[#107331886]

Signed-off-by: Evan Short <eshort@pivotal.io>

--- a/web/templates/layouts/with_pipeline.html
+++ b/web/templates/layouts/with_pipeline.html
@@ -23,7 +23,7 @@
     <meta name="theme-color" content="#000000">
   </head>
   <body class="pipelinesNav-enabled">
-    <div class="js-pipelinesNav">
+    <div class="js-pipelinesNav" data-endpoint="/api/v1/teams/{{.TeamName}}/pipelines">
       <div class="nav-container">
         <ul class="pipelines js-pipelinesNav-list"></ul>
       </div>
@@ -31,9 +31,9 @@
       <div class="page-to-slide">
         <nav>
           <ul class="js-groups groups">
-            <li class="main"><span class="js-pipelinesNav-toggle btn-hamburger" aria-label="Toggle List of Pipelines"><i class="fa fa-bars"></i></span></li><li class="main"><a href="/pipelines/{{.PipelineName}}" aria-label="Back to Pipeline View"><i class="fa fa-home"></i></a></li>
+            <li class="main"><span class="js-pipelinesNav-toggle btn-hamburger" aria-label="Toggle List of Pipelines"><i class="fa fa-bars"></i></span></li><li class="main"><a href="/teams/{{.TeamName}}/pipelines/{{.PipelineName}}" aria-label="Back to Pipeline View"><i class="fa fa-home"></i></a></li>
             {{range .GroupStates}}
-              <li{{if .Enabled}} class="active"{{end}}><a href="/pipelines/{{$.PipelineName}}?groups={{.Name}}">{{.Name}}</a></li>
+              <li{{if .Enabled}} class="active"{{end}}><a href="/teams/{{.TeamName}}/pipelines/{{$.PipelineName}}?groups={{.Name}}">{{.Name}}</a></li>
             {{end}}
           </ul>
           <ul class="nav-right">
