--- a/web/templates/job.html
+++ b/web/templates/job.html
@@ -8,6 +8,6 @@
 <script src="{{asset "elm.min.js"}}"></script>
 <script type="text/javascript">
 concourse.pipelineName = "{{.PipelineName}}"; // used for detecting if the pipeline is paused
-Elm.embed(Elm.JobPage, document.getElementById("elm-app"), {jobName: {{.JobName}}, pipelineName: {{.PipelineName}}, pageSince: {{.Since}}, pageUntil: {{.Until}}});
+Elm.embed(Elm.JobPage, document.getElementById("elm-app"), {jobName: {{.JobName}}, teamName: {{.TeamName}}, pipelineName: {{.PipelineName}}, pageSince: {{.Since}}, pageUntil: {{.Until}}});
 </script>
 {{end}}
