simplify build view routes
* no longer support viewing pre-elm builds
* no longer fetch unnecessary data on build endpoint

--- a/web/templates/build.html
+++ b/web/templates/build.html
@@ -1,4 +1,4 @@
-{{define "title"}}{{.Job.Name}} #{{.Build.Name}} - Concourse{{end}}
+{{define "title"}}{{.JobName}} #{{.Build.Name}} - Concourse{{end}}
 
 {{define "body"}}
 <div id="elm-app"></div>
