fix logging in via basic auth
Previously going to /teams/team-name/login, choosing basic auth, and
logging in would fail.

- Replace the basic auth challenge with a (very ugly) form
- Always redirect to /teams/team-name/login instead of /login

Presently the pipelines that are shown on logging in to a team other
than main are in fact the pipelines for main, but that will be fixed
separately.

[#107331886]

Signed-off-by: Kris Hicks <khicks@pivotal.io>

--- a/web/templates/resource.html
+++ b/web/templates/resource.html
@@ -27,7 +27,7 @@
     <h1 class="h1">{{.Resource.Name}}</h1>
   </div>
 
-  <div class="js-resource" data-endpoint="/api/v1/teams/{{.TeamName}}/pipelines/{{.PipelineName}}/resources/{{.Resource.Name}}">
+  <div class="js-resource" data-teamname="{{.TeamName}}" data-endpoint="/api/v1/teams/{{.TeamName}}/pipelines/{{.PipelineName}}/resources/{{.Resource.Name}}">
   <div class="resource-check-status">
     <div class="build-step">
       <div class="header">
