show error message when atc server dies [fix #59]

--- a/web/templates/layouts/with_pipeline.html
+++ b/web/templates/layouts/with_pipeline.html
@@ -23,6 +23,12 @@
     <meta name="theme-color" content="#000000">
   </head>
   <body class="pipelinesNav-enabled">
+    <div class="error-message hidden">
+      <div class="message">
+        <i class="fa fa-exclamation-triangle fa-5x"></i>
+        <p>Concourse server went wrong...</p>
+      </div>
+    </div>
     <div class="js-pipelinesNav">
       <div class="nav-container">
         <ul class="pipelines js-pipelinesNav-list"></ul>
