fix pipelines navigation sidebar on builds page
- added /api/v1/pipelines endpoint that will show pipelines for current
  team.

[#121172047]

Signed-off-by: Chris Dutra <cdutra@pivotal.io>

--- a/web/templates/layouts/with_pipeline.html
+++ b/web/templates/layouts/with_pipeline.html
@@ -23,7 +23,7 @@
     <meta name="theme-color" content="#000000">
   </head>
   <body class="pipelinesNav-enabled">
-    <div class="js-pipelinesNav" data-endpoint="/api/v1/teams/{{.TeamName}}/pipelines">
+    <div class="js-pipelinesNav">
       <div class="nav-container">
         <ul class="pipelines js-pipelinesNav-list"></ul>
       </div>
