tweak error message

--- a/web/templates/layouts/with_pipeline.html
+++ b/web/templates/layouts/with_pipeline.html
@@ -26,7 +26,7 @@
     <div class="error-message hidden">
       <div class="message">
         <i class="fa fa-exclamation-triangle fa-5x"></i>
-        <p>Concourse server went wrong...</p>
+        <p>currently experiencing turbulence</p>
       </div>
     </div>
     <div class="js-pipelinesNav">
