--- a/web/assets/css/layout.less
+++ b/web/assets/css/layout.less
@@ -25,13 +25,23 @@ html, body, #elm-app-embed, #subpage, .content-frame {
     height: @top-bar-height;
 
     .groups {
-      flex-grow: 1;
+      flex-grow: 0;
       display: flex;
       flex-direction: row;
+      flex-shrink: 0;
+      overflow-x: scroll;
+      overflow-y: hidden;
+      width: 85%;
+
+      li {
+        flex-shrink: 0;
+      }
     }
 
     .nav-right {
       flex-shrink: 1;
+      position: fixed;
+      right: 0;
 
       .user-info {
         text-align: right;
