better scaling for navbar
- the width % left large gaps between user options
  on wide monitors

Signed-off-by: Jim Conner <jim@secret.org>

--- a/web/assets/css/layout.less
+++ b/web/assets/css/layout.less
@@ -31,7 +31,8 @@ html, body, #elm-app-embed, #subpage, .content-frame {
       flex-shrink: 0;
       overflow-x: scroll;
       overflow-y: hidden;
-      width: 85%;
+      position: fixed;
+      right: 120px;
 
       li {
         flex-shrink: 0;
