ensure that left of nav bar can always be scrolled to
Signed-off-by: Jim Conner <jim@secret.org>

--- a/web/assets/css/layout.less
+++ b/web/assets/css/layout.less
@@ -33,6 +33,7 @@ html, body, #elm-app-embed, #subpage, .content-frame {
       overflow-y: hidden;
       position: fixed;
       right: 120px;
+      left: 0;
 
       li {
         flex-shrink: 0;
