--- a/web/assets/css/layout.less
+++ b/web/assets/css/layout.less
@@ -40,6 +40,19 @@ html, body, #elm-app-embed, #subpage, .content-frame {
       }
     }
 
+    .groups::-webkit-scrollbar-track {
+      background-color: #1A252F;
+    }
+
+    .groups::-webkit-scrollbar {
+      height: 4px;
+      background-color: #1A252F;
+    }
+
+    .groups::-webkit-scrollbar-thumb {
+      background-color: #E6E7E8;
+    }
+
     .nav-right {
       flex-shrink: 1;
       position: fixed;
