only show scrollbar when required
Signed-off-by: Jim Conner <jim@secret.org>

--- a/web/assets/css/layout.less
+++ b/web/assets/css/layout.less
@@ -29,7 +29,7 @@ html, body, #elm-app-embed, #subpage, .content-frame {
       display: flex;
       flex-direction: row;
       flex-shrink: 0;
-      overflow-x: scroll;
+      overflow-x: auto;
       overflow-y: hidden;
       position: fixed;
       right: 120px;
