nest scrollbar modifications within groups in less
Signed-off-by: Jim Conner <jim@secret.org>

--- a/web/assets/css/layout.less
+++ b/web/assets/css/layout.less
@@ -38,19 +38,19 @@ html, body, #elm-app-embed, #subpage, .content-frame {
       li {
         flex-shrink: 0;
       }
-    }
 
-    .groups::-webkit-scrollbar-track {
-      background-color: #1A252F;
-    }
+      ::-webkit-scrollbar-track {
+        background-color: #1A252F;
+      }
 
-    .groups::-webkit-scrollbar {
-      height: 4px;
-      background-color: #1A252F;
-    }
+      ::-webkit-scrollbar {
+        height: 4px;
+        background-color: #1A252F;
+      }
 
-    .groups::-webkit-scrollbar-thumb {
-      background-color: #E6E7E8;
+      ::-webkit-scrollbar-thumb {
+        background-color: #E6E7E8;
+      }
     }
 
     .nav-right {
